--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Logs/AssetImportWorker0.log
 *.log
+Logs/AssetImportWorker0.log
+Logs/AssetImportWorker0.log
+Logs/shadercompiler-AssetImportWorker0.log
+Logs/AssetImportWorker0-prev.log
